--- a/package.json
+++ b/package.json
@@ -6,5 +6,5 @@
   "dependencies": {
     "mongoose":  ">= 1.3.3"
   },
-  "engines":      { "node": "> 0.4.8" }
+  "engines":      { "node": ">= 0.4.8" }
 }
