--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version":      "0.0.1",
   "author":       "Paul Jensen <paulbjensen@gmail.com>",
   "dependencies": {
-    "mongoose":  ">= 1.3.3"
+    "mongoose":  ">= 1.3.3",
+    "control":  ">= 0.1.7"
   },
   "engines":      { "node": ">= 0.4.8" }
 }
