Added seed data file and cake task to load the db with seed data

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version":      "0.0.1",
   "author":       "Paul Jensen <paulbjensen@gmail.com>",
   "dependencies": {
+    "mongodb":  ">= 0.9.3",
     "mongoose":  ">= 1.3.3",
     "control":  ">= 0.1.7"
   },
